# seccam

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-board-image.yml
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs
backend/crates/api/src/routes/: devices.rs  events.rs  health.rs  mod.rs  recordings.rs  settings.rs  status.rs  ws.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: error.rs  lib.rs  models.rs  ports.rs
backend/crates/ipc/: Cargo.toml
backend/crates/ipc/src/: lib.rs
backend/crates/store/: Cargo.toml
backend/crates/store/src/: lib.rs
cmake/: riscv64_musl_duo256m.cmake
core/: CMakeLists.txt  README.md
core/include/seccam/core/: command_dispatcher.hpp  core_service.hpp  daemon_config.hpp  detection_tracker.hpp  ipc_server.hpp  recording_catalog.hpp  recording_engine.hpp  runtime_state.hpp  types.hpp
core/src/: command_dispatcher.cpp  config.cpp  core_backend_cvi.cpp  core_service.cpp  detection_tracker.cpp  ipc_server.cpp  main.cpp  recording_catalog.cpp  recording_engine.cpp  runtime_state.cpp  types.cpp
docker/: board-image-builder.Dockerfile
docs/: management-stack-architecture.md
packaging/milkv-duo256m-musl-riscv64-sd/mnt/data/seccam/: seccam-api.env  seccam-core.ini.in
packaging/milkv-duo256m-musl-riscv64-sd/mnt/system/: auto.sh
proto/: seccam_ipc.proto
scripts/: build_api_riscv64.sh  build_board_image.sh  build_core_riscv64.sh  prepare_duo256m_sdk.sh  repack_official_img.sh
