[package]
name = "seccam-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
seccam-application = { path = "../application" }
seccam-domain = { path = "../domain" }
seccam-ipc = { path = "../ipc" }
seccam-store = { path = "../store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
